--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -1424,6 +1424,199 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5def5588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exercise 3\n",
+    "EX3_LOG_FILE = \"ex3_experiments.json\"\n",
+    "\n",
+    "def load_ex3_log():\n",
+    "    if os.path.exists(EX3_LOG_FILE):\n",
+    "        with open(EX3_LOG_FILE, \"r\") as f:\n",
+    "            return json.load(f)\n",
+    "    return []\n",
+    "\n",
+    "def save_ex3_log(log):\n",
+    "    with open(EX3_LOG_FILE, \"w\") as f:\n",
+    "        json.dump(log, f, indent=2)\n",
+    "\n",
+    "def list_ex3_experiments():\n",
+    "    log = load_ex3_log()\n",
+    "    for i, exp in enumerate(log):\n",
+    "        print(f\"  [{i}] {exp['label']:<25} train={exp['final_train_loss']:.4f}  val={exp['final_val_loss']:.4f}\")\n",
+    "\n",
+    "def delete_ex3_experiment(index):\n",
+    "    log = load_ex3_log()\n",
+    "    removed = log.pop(index)\n",
+    "    save_ex3_log(log)\n",
+    "    print(f\"Deleted: '{removed['label']}'. Remaining: {len(log)} experiments.\")\n",
+    "\n",
+    "def clear_all_ex3_experiments():\n",
+    "    save_ex3_log([])\n",
+    "    print(\"All ex3 experiments cleared.\")\n",
+    "\n",
+    "\n",
+    "def run_ex3_experiment(case_mode=\"both\", label=None):\n",
+    "    if label is None:\n",
+    "        label = f\"case={case_mode}\"\n",
+    "\n",
+    "    ex3_text = preprocessed_text(SEP.join(captions), case_mode)\n",
+    "    ex3_chars = sorted(list(set(ex3_text)))\n",
+    "    ex3_vocab_size = len(ex3_chars)\n",
+    "    ex3_stoi = {ch: i for i, ch in enumerate(ex3_chars)}\n",
+    "    ex3_itos = {i: ch for i, ch in enumerate(ex3_chars)}\n",
+    "    ex3_encode = lambda s: [ex3_stoi[c] for c in s]\n",
+    "    ex3_decode = lambda ids: \"\".join(ex3_itos[i] for i in ids)\n",
+    "\n",
+    "    ex3_data = torch.tensor(ex3_encode(ex3_text), dtype=torch.long)\n",
+    "    n = int(0.9 * len(ex3_data))\n",
+    "    ex3_train = ex3_data[:n]\n",
+    "    ex3_val = ex3_data[n:]\n",
+    "\n",
+    "    ex3_mcfg = ModelConfig(vocab_size=ex3_vocab_size, block_size=cfg.block_size)\n",
+    "    fresh_model = NanoGPT(ex3_mcfg).to(cfg.device)\n",
+    "    opt = torch.optim.AdamW(fresh_model.parameters(), lr=cfg.lr, weight_decay=cfg.weight_decay)\n",
+    "\n",
+    "    def _get_batch(split):\n",
+    "        src = ex3_train if split == \"train\" else ex3_val\n",
+    "        ix = torch.randint(len(src) - cfg.block_size - 1, (cfg.batch_size,))\n",
+    "        x = torch.stack([src[i:i+cfg.block_size] for i in ix])\n",
+    "        y = torch.stack([src[i+1:i+cfg.block_size+1] for i in ix])\n",
+    "        return x.to(cfg.device), y.to(cfg.device)\n",
+    "\n",
+    "    eval_steps = []\n",
+    "    train_losses = []\n",
+    "    val_losses = []\n",
+    "\n",
+    "    @torch.no_grad()\n",
+    "    def _estimate_loss():\n",
+    "        fresh_model.eval()\n",
+    "        out = {}\n",
+    "        for split in [\"train\", \"val\"]:\n",
+    "            losses_t = torch.zeros(cfg.eval_iters)\n",
+    "            for k in range(cfg.eval_iters):\n",
+    "                X, Y = _get_batch(split)\n",
+    "                _, l = fresh_model(X, Y)\n",
+    "                losses_t[k] = l.item()\n",
+    "            out[split] = losses_t.mean().item()\n",
+    "        fresh_model.train()\n",
+    "        return out\n",
+    "\n",
+    "    fresh_model.train()\n",
+    "    pbar = tqdm(range(cfg.max_iters), desc=f\"Ex3: {label}\")\n",
+    "    for it in pbar:\n",
+    "        if it % cfg.eval_interval == 0:\n",
+    "            losses = _estimate_loss()\n",
+    "            eval_steps.append(it)\n",
+    "            train_losses.append(losses[\"train\"])\n",
+    "            val_losses.append(losses[\"val\"])\n",
+    "            pbar.set_postfix(train=f\"{losses['train']:.4f}\", val=f\"{losses['val']:.4f}\")\n",
+    "\n",
+    "        xb, yb = _get_batch(\"train\")\n",
+    "        _, loss = fresh_model(xb, yb)\n",
+    "        opt.zero_grad(set_to_none=True)\n",
+    "        loss.backward()\n",
+    "        opt.step()\n",
+    "\n",
+    "    final = _estimate_loss()\n",
+    "    eval_steps.append(cfg.max_iters)\n",
+    "    train_losses.append(final[\"train\"])\n",
+    "    val_losses.append(final[\"val\"])\n",
+    "\n",
+    "    prompt_raw = \"H&E stained section showing\"\n",
+    "    prompt = preprocessed_text(prompt_raw, case_mode)\n",
+    "\n",
+    "    fresh_model.eval()\n",
+    "    idx = torch.tensor([ex3_encode(prompt)], dtype=torch.long, device=cfg.device)\n",
+    "    temperature = 1.0\n",
+    "    top_k = 60\n",
+    "    for _ in range(500):\n",
+    "        idx_cond = idx[:, -cfg.block_size:]\n",
+    "        logits, _ = fresh_model(idx_cond)\n",
+    "        logits = logits[:, -1, :] / max(temperature, 1e-6)\n",
+    "        if top_k is not None:\n",
+    "            v, _ = torch.topk(logits, k=min(top_k, logits.size(-1)))\n",
+    "            logits[logits < v[:, [-1]]] = -float(\"Inf\")\n",
+    "        probs = F.softmax(logits, dim=-1)\n",
+    "        next_id = torch.multinomial(probs, num_samples=1)\n",
+    "        idx = torch.cat([idx, next_id], dim=1)\n",
+    "    generated = ex3_decode(idx[0].tolist())\n",
+    "\n",
+    "    result = {\n",
+    "        \"label\": label,\n",
+    "        \"timestamp\": datetime.datetime.now().isoformat(),\n",
+    "        \"case_mode\": case_mode,\n",
+    "        \"vocab_size\": ex3_vocab_size,\n",
+    "        \"eval_steps\": eval_steps,\n",
+    "        \"train_losses\": train_losses,\n",
+    "        \"val_losses\": val_losses,\n",
+    "        \"final_train_loss\": final[\"train\"],\n",
+    "        \"final_val_loss\": final[\"val\"],\n",
+    "        \"generated_sample\": generated,\n",
+    "    }\n",
+    "\n",
+    "    log = load_ex3_log()\n",
+    "    log.append(result)\n",
+    "    save_ex3_log(log)\n",
+    "    print(f\"[{label}] vocab={ex3_vocab_size} train={final['train']:.4f} val={final['val']:.4f}\")\n",
+    "    print(f\"Sample: {generated[:200]}\")\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def draw_ex3_plots(log_file=\"\"):\n",
+    "    if log_file:\n",
+    "        with open(log_file, \"r\") as f:\n",
+    "            log = json.load(f)\n",
+    "    else:\n",
+    "        log = load_ex3_log()\n",
+    "    if not log:\n",
+    "        print(\"No ex3 experiments logged yet\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"{'Label':<25} {'Case':<8} {'Vocab':<8} {'Train Loss':<12} {'Val Loss':<12}\")\n",
+    "    for exp in log:\n",
+    "        print(f\"{exp['label']:<25} {exp['case_mode']:<8} {exp['vocab_size']:<8} \"\n",
+    "              f\"{exp['final_train_loss']:<12.4f} {exp['final_val_loss']:<12.4f}\")\n",
+    "\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(8, 5))\n",
+    "    colors = plt.cm.tab10.colors\n",
+    "    for i, exp in enumerate(log):\n",
+    "        c = colors[i % len(colors)]\n",
+    "        ax.plot(exp[\"eval_steps\"], exp[\"train_losses\"],\n",
+    "                color=c, linestyle=\"-\", label=f'{exp[\"label\"]} (train)')\n",
+    "        ax.plot(exp[\"eval_steps\"], exp[\"val_losses\"],\n",
+    "                color=c, linestyle=\"--\", label=f'{exp[\"label\"]} (val)')\n",
+    "    ax.set_xlabel(\"Training Iteration\")\n",
+    "    ax.set_ylabel(\"Loss\")\n",
+    "    ax.set_title(\"Exercise 3: Effect of Case Mode on Training\")\n",
+    "    ax.legend(fontsize=\"small\")\n",
+    "    plt.tight_layout()\n",
+    "    save_name = os.path.splitext(log_file)[0] + \".png\" if log_file else \"ex3_loss_plots.png\"\n",
+    "    plt.savefig(save_name, dpi=150, bbox_inches=\"tight\")\n",
+    "    plt.show()\n",
+    "    print(f\"Plot saved to {save_name}\")\n",
+    "\n",
+    "    print(\"\\n Generated Samples\")\n",
+    "    for exp in log:\n",
+    "        print(f\"\\n[{exp['label']}]:\")\n",
+    "        print(exp[\"generated_sample\"][:300])\n",
+    "\n",
+    "\n",
+    "def reproduce_ex3():\n",
+    "    clear_all_ex3_experiments()\n",
+    "    run_ex3_experiment(case_mode=\"both\", label=\"both (baseline)\")\n",
+    "    run_ex3_experiment(case_mode=\"lower\", label=\"lowercase\")\n",
+    "    run_ex3_experiment(case_mode=\"upper\", label=\"uppercase\")\n",
+    "    draw_ex3_plots()\n",
+    "\n",
+    "reproduce_ex3()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "198a3e15",
    "metadata": {},
@@ -1431,16 +1624,6 @@
     "### Exercise 2 Analysis\n",
     "\n",
     "We ran 12 experiments: a baseline plus 6 variations with moderate (\"average\") changes, and a baseline plus 6 variations with extreme changes. All experiments used `max_iters=2000` on CPU with `block_size=64`. To reproduce the experiments, run `reproduce_average_changes()` and `reproduce_extreme_changes()`.\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eebbafa6",
-   "metadata": {},
-   "source": [
     "\n",
     "\n",
     "#### Effect of Learning Rate\n",
@@ -1465,15 +1648,7 @@
     "\n",
     "![Figure 3: Effect of Learning Rate, extreme experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-extreme_learning_rate.png)\n",
     "\n",
-    "*Figure 3: Loss curves for extreme learning rate variations (lr=1e-5, baseline 1e-3, lr=5e-2).*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "791ddb00",
-   "metadata": {},
-   "source": [
-    "\n",
+    "*Figure 3: Loss curves for extreme learning rate variations (lr=1e-5, baseline 1e-3, lr=5e-2).*\n",
     "\n",
     "- High learning rate (1e-2): The optimizer takes overly large steps, causing it to overshoot minima. The loss curve shows instability because the loss occasionally rises before descending again (e.g. from 2.30 at iter 1400 back up to 2.33 at iter 1600), as visible in [Figure 2](#fig-lr-average). The final loss (val=2.04) is worse than even the low learning rate, because the large steps prevent the optimizer from settling into a good region of the loss landscape. This is optimization instability, not underfitting.\n",
     "\n",
@@ -1571,7 +1746,7 @@
     "\n",
     "- Underfitting is indicated by high train and val loss, the model has not learned enough. This was observed with low learning rates ([Figure 2](#fig-lr-average), [Figure 3](#fig-lr-extreme)) and small batch sizes ([Figure 4](#fig-bs-average), [Figure 5](#fig-bs-extreme)).\n",
     "- Overfitting is indicated by a large gap between low train loss and higher val loss when the model memorizes training data. Early signs of this were visible with bs=64 (train=0.75, val=0.93, gap=0.18) compared to the baseline (train=1.05, val=1.12, gap=0.07), as shown in [Figure 5](#fig-bs-extreme).\n",
-    "- Unstable training is indicated by nonmonotonic loss curves (loss climbing back up). This was observed with high learning rates (lr=1e-2 and especially lr=5e-2), visible in [Figure 2](#fig-lr-average) and [Figure 3](#fig-lr-extreme).\n"
+    "- Unstable training is indicated by nonmonotonic loss curves (loss climbing back up). This was observed with high learning rates (lr=1e-2 and especially lr=5e-2), visible in [Figure 2](#fig-lr-average) and [Figure 3](#fig-lr-extreme)."
    ]
   },
   {
