upload ex1 image

--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "15cc3939",
    "metadata": {},
    "outputs": [],
@@ -1197,6 +1197,7 @@
     "import json\n",
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
+    "from dataclasses import replace as _dc_replace\n",
     "\n",
     "EX2_LOG_FILE = \"ex2_experiments.json\"\n",
     "\n",
@@ -1254,14 +1255,21 @@
     "        if eval_interval != 200: parts.append(f\"eval_int={eval_interval}\")\n",
     "        label = \", \".join(parts) if parts else \"baseline\"\n",
     "    \n",
-    "    cfg.lr = lr\n",
-    "    cfg.batch_size = batch_size\n",
-    "    cfg.eval_interval = eval_interval\n",
-    "    cfg.max_iters = max_iters\n",
-    "    cfg.eval_iters = eval_iters\n",
+    "    # Local config copy — global cfg stays untouched\n",
+    "    ecfg = _dc_replace(cfg, lr=lr, batch_size=batch_size,\n",
+    "                        eval_interval=eval_interval, max_iters=max_iters,\n",
+    "                        eval_iters=eval_iters)\n",
     "    \n",
-    "    fresh_model = NanoGPT(mcfg).to(cfg.device)\n",
-    "    opt = torch.optim.AdamW(fresh_model.parameters(), lr=cfg.lr, weight_decay=cfg.weight_decay)\n",
+    "    # Local get_batch so the experiment batch_size doesn't leak into the global one\n",
+    "    def _get_batch(split):\n",
+    "        src = train_data if split == \"train\" else val_data\n",
+    "        ix = torch.randint(len(src) - ecfg.block_size - 1, (ecfg.batch_size,))\n",
+    "        x = torch.stack([src[i:i+ecfg.block_size] for i in ix])\n",
+    "        y = torch.stack([src[i+1:i+ecfg.block_size+1] for i in ix])\n",
+    "        return x.to(ecfg.device), y.to(ecfg.device)\n",
+    "    \n",
+    "    fresh_model = NanoGPT(mcfg).to(ecfg.device)\n",
+    "    opt = torch.optim.AdamW(fresh_model.parameters(), lr=ecfg.lr, weight_decay=ecfg.weight_decay)\n",
     "    \n",
     "    eval_steps = []\n",
     "    train_losses = []\n",
@@ -1272,9 +1280,9 @@
     "        fresh_model.eval()\n",
     "        out = {}\n",
     "        for split in [\"train\", \"val\"]:\n",
-    "            losses_t = torch.zeros(cfg.eval_iters)\n",
-    "            for k in range(cfg.eval_iters):\n",
-    "                X, Y = get_batch(split)\n",
+    "            losses_t = torch.zeros(ecfg.eval_iters)\n",
+    "            for k in range(ecfg.eval_iters):\n",
+    "                X, Y = _get_batch(split)\n",
     "                _, l = fresh_model(X, Y)\n",
     "                losses_t[k] = l.item()\n",
     "            out[split] = losses_t.mean().item()\n",
@@ -1282,23 +1290,23 @@
     "        return out\n",
     "    \n",
     "    fresh_model.train()\n",
-    "    pbar = tqdm(range(cfg.max_iters), desc=f\"Ex2: {label}\")\n",
+    "    pbar = tqdm(range(ecfg.max_iters), desc=f\"Ex2: {label}\")\n",
     "    for it in pbar:\n",
-    "        if it % cfg.eval_interval == 0:\n",
+    "        if it % ecfg.eval_interval == 0:\n",
     "            losses = _estimate_loss()\n",
     "            eval_steps.append(it)\n",
     "            train_losses.append(losses[\"train\"])\n",
     "            val_losses.append(losses[\"val\"])\n",
     "            pbar.set_postfix(train=f\"{losses['train']:.4f}\", val=f\"{losses['val']:.4f}\")\n",
     "        \n",
-    "        xb, yb = get_batch(\"train\")\n",
+    "        xb, yb = _get_batch(\"train\")\n",
     "        _, loss = fresh_model(xb, yb)\n",
     "        opt.zero_grad(set_to_none=True)\n",
     "        loss.backward()\n",
     "        opt.step()\n",
     "    \n",
     "    final = _estimate_loss()\n",
-    "    eval_steps.append(cfg.max_iters)\n",
+    "    eval_steps.append(ecfg.max_iters)\n",
     "    train_losses.append(final[\"train\"])\n",
     "    val_losses.append(final[\"val\"])\n",
     "    \n",
